# ROS2Tutorial

./: .gitignore  2025赛季视觉部第四次培训——ROS2.md  2025赛季视觉部第四次培训——ROS2基础.md
ros_ws/: GenerateClangdHeaderPath.sh  output.txt
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/log/: latest_build
ros_ws/src/callback_demo/: CMakeLists.txt  package.xml
ros_ws/src/callback_demo/src/: main.cpp
ros_ws/src/example_cpp/: CMakeLists.txt  package.xml
ros_ws/src/example_cpp/src/: node_01.cpp
ros_ws/src/example_param_rclcpp/: CMakeLists.txt  package.xml
ros_ws/src/example_param_rclcpp/config/: params.yaml
ros_ws/src/example_param_rclcpp/src/: param.cpp
ros_ws/src/example_service_rclcpp/: CMakeLists.txt  package.xml
ros_ws/src/example_service_rclcpp/src/: service_client_01.cpp  service_server_01.cpp
ros_ws/src/example_topic_rclcpp/: CMakeLists.txt  package.xml
ros_ws/src/example_topic_rclcpp/launch/: demo.launch.py
ros_ws/src/example_topic_rclcpp/src/: topic_publisher_01.cpp
ros_ws/src/my_interface/: CMakeLists.txt  package.xml
ros_ws/src/robot_status/: CMakeLists.txt  package.xml
ros_ws/src/robot_status/src/: publisher.cpp
ros_ws/src/rviz_demo/: CMakeLists.txt  package.xml
ros_ws/src/rviz_demo/src/: main.cpp
ros_ws/src/self_interface/: CMakeLists.txt  package.xml
ros_ws/src/self_interface/msg/: Robot.msg
ros_ws/src/self_interface/src/: main.cpp
ros_ws/src/sever_cpp/: CMakeLists.txt  package.xml
ros_ws/src/tf_demo/: CMakeLists.txt  package.xml
ros_ws/src/tf_demo/src/: pub_tf.cpp  sub_tf.cpp
ros_ws/test/: metadata.yaml  test_0.db3
(+167 files in other folders)
